<resources>
    <string name="app_name">Route Tracker</string>

    <string name="LoginStatus"></string>
    <string name="Status"></string>
    <string name="LoginResponse">Test</string>
    <string name="Response"></string>

    <string name="title_activity_startscreen">Route Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_button">Login</string>
    <string name="start_button">Start</string>

    <string name="home">Home</string>
    <string name="track">Track anzeigen</string>
    <string name="archiv">Archiv</string>
    <string name="logout">Logout</string>

</resources>
