<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home"/>
        <item android:id="@+id/nav_track"
            android:icon="@drawable/ic_menu_mapmode"
            android:title="@string/track" />
        <item android:id="@+id/nav_archiv"
            android:icon="@drawable/ic_menu_archive"
            android:title="@string/archiv" />
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_set_as"
            android:title="@string/logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>