<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/laeuferin">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:text="@string/login_button"
        android:layout_centerInParent="true"
        android:background="@drawable/mybutton"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/color_cursor"
        android:ems="10"
        android:id="@+id/editEmail"
        android:background="@drawable/back"
        android:layout_above="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:hint="E-Mail"
        android:textColorHint="#afafaf"
        android:textSize="14dp"
        android:textColor="#5f5f5f"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/back"
        android:layout_above="@+id/btnLogin"
        android:layout_marginBottom="4dp"
        android:hint="Password"
        android:textColorHint="#afafaf"
        android:textSize="14dp"
        android:textColor="#5f5f5f" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:layout_above="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Response"
        android:visibility="invisible"/>

</RelativeLayout>
